# samay

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cyrius.cyml
docs/: benchmarks.md
docs/adr/: 0001-port-representation.md  0002-ai-hwaccel-profile-placement.md  0003-str-string-representation.md  0004-deterministic-tie-breaks.md  0005-restore-input-validation.md  README.md
docs/architecture/: overview.md
docs/audit/: 2026-07-21-audit.md
docs/development/: roadmap.md  state.md
docs/development/issues/: 2026-07-19-cyrius-f64-json-roundtrip.md
docs/guides/: getting-started.md
lib/: ai-hwaccel.cyr  alloc.cyr  alloc_agnos.cyr  alloc_macos.cyr  alloc_windows.cyr  args_macos.cyr  bayan.cyr  chrono.cyr  fmt.cyr  io.cyr  math.cyr  process.cyr  process_win.cyr  sakshi.cyr  syscalls.cyr  syscalls_aarch64_linux.cyr  syscalls_linux_common.cyr  syscalls_macos.cyr  syscalls_windows.cyr  syscalls_x86_64_agnos.cyr  syscalls_x86_64_linux.cyr  thread_local.cyr
rust-old/: Cargo.toml
rust-old/src/: lib.rs
src/: cron.cyr  cronexpr.cyr  json.cyr  lib.cyr  main.cyr  scheduler.cyr  training.cyr  types.cyr  uuid.cyr
tests/: samay.bcyr  samay.fcyr  samay.tcyr
