[package]
name = "samay"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Samay — task scheduler for AGNOS (cron, resource-aware scheduling)"
homepage = "https://github.com/MacCracken/samay"
repository = "https://github.com/MacCracken/samay"
readme = "README.md"
keywords = ["scheduler", "cron", "task", "resource"]
categories = ["os", "asynchronous"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
ai-hwaccel = "1.0"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
